Refactors ArrayStack